--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
   <head>
-    <script src="note-model.js"></script>
-    <script src="assert.js"></script>
-    <script src="note-model-tests.js"></script>
+      <script src="src/note-list-view.js"></script>
+    <script src="src/note-model.js"></script>
+    <script src="src/note-list-model.js"></script>
+    <script src="spec/assert.js"></script>
+    <script src="spec/note-model-tests-spec.js"></script>
+    <script src="spec/note-lists-model-spec.js"></script>
+    <script src="spec/note-list-view-spec.js"></script>
   </head>
   <body></body>
 </html>
