--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>title</title>
   </head>
   <body>
-    <h1>Hiya</h1>
+    <div id="app">Hello</div>
   </body>
-</html>
+  <script src="src/note-list-view.js"></script>
+  <script src="src/note-model.js"></script>
+  <script src="src/note-list-model.js"></script>
+  <script src="src/note-controller.js"></script>
+  </html>
