--- a/tests.html
+++ b/tests.html
@@ -3,10 +3,12 @@
       <script src="src/note-list-view.js"></script>
     <script src="src/note-model.js"></script>
     <script src="src/note-list-model.js"></script>
+    <script src="src/note-controller.js"></script>
     <script src="spec/assert.js"></script>
     <script src="spec/note-model-tests-spec.js"></script>
     <script src="spec/note-lists-model-spec.js"></script>
     <script src="spec/note-list-view-spec.js"></script>
+    <script src="spec/note-controller-spec.js"></script>
   </head>
   <body></body>
 </html>
