--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <title>title</title>
   </head>
   <body>
-    <div id="app">Hello</div>
+    <div id="app">Your list of notes will go here</div>
+    <div id="note">Hello</div>
   </body>
+  <script src="src/id-generator.js"></script>
   <script src="src/note-list-view.js"></script>
   <script src="src/note-model.js"></script>
   <script src="src/note-list-model.js"></script>
   <script src="src/note-controller.js"></script>
+  <script src="src/single-note-view.js"></script>
   </html>
