--- a/tests.html
+++ b/tests.html
@@ -1,15 +1,17 @@
 <html>
   <head>
-    <script src="src/note-list-view.js"></script>
+    <script src="src/id-generator.js"></script>
     <script src="src/note-model.js"></script>
+    <script src="src/note-list-view.js"></script>
     <script src="src/note-list-model.js"></script>
     <script src="src/note-controller.js"></script>
     <script src="src/single-note-view.js"></script>
+    <!------->
     <script src="spec/assert.js"></script>
     <script src="spec/note-model-tests-spec.js"></script>
     <script src="spec/note-lists-model-spec.js"></script>
     <script src="spec/note-list-view-spec.js"></script>
-    <script src="spec/note-controller-spec.js"></script>
+    <!-- <script src="spec/note-controller-spec.js"></script> -->
     <script src="spec/single-note-spec.js"></script>
   </head>
   <body></body>
